overlay issue managed

--- a/src/styles/sampaadak-distractionfree.css
+++ b/src/styles/sampaadak-distractionfree.css
@@ -7,11 +7,16 @@
   background-color: rgba(0, 0, 0, 0.5);
   display: flex;
   flex-direction: column;
+  z-index: 9999;
 }
 
 .sampaadak-df-overlay-content {
   background-color: #fff;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
   width: 100%; 
+}
+
+.sampaadak-df-overlay-content p {
+  margin: 0;
 }
 
