--- a/src/styles/sampaadak.css
+++ b/src/styles/sampaadak.css
@@ -6,8 +6,8 @@
   display: flex;
   gap: 5px;
   padding: 10px;
-  background-color: #f5f5f5; /* Light grey background */
-  border-bottom: 1px solid #ddd; /* Slightly darker border */
+  background-color: #f5f5f5; 
+  border-bottom: 1px solid #ddd; 
 }
 
 .sampaadak-toolbar button {
@@ -16,11 +16,11 @@
   cursor: pointer;
   padding: 5px;
   font-size: 16px;
-  color: #333; /* Darker text color for better contrast */
+  color: #333;
 }
 
 .sampaadak-toolbar button:hover {
-  background-color: #e0e0e0; /* Slightly darker grey on hover */
+  background-color: #e0e0e0; 
 }
 
 .sampaadak-toolbar button .material-icons {
@@ -28,25 +28,24 @@
 }
 
 #editor {
-  border: 1px solid #ddd; /* Light grey border */
+  border: 1px solid #ddd; 
   padding: 10px;
   min-height: 200px;
   margin-top: 10px;
-  background-color: #fff; /* White background for the editor */
-  font-family: Arial, sans-serif; /* Set default font for the editor */
+  background-color: #fff; 
+  font-family: Arial, sans-serif; 
 }
 
 #editor p {
   margin: 0;
 }
 
-/* Dropdown container */
+
 .dropdown {
   position: relative;
   display: inline-block;
 }
 
-/* Dropdown button */
 .dropdown-button {
   background: none;
   border: none;
@@ -56,7 +55,6 @@
   color: #333;
 }
 
-/* Dropdown content */
 .dropdown-content {
   display: none;
   position: absolute;
@@ -80,7 +78,6 @@
   background-color: #f1f1f1;
 }
 
-/* Show the dropdown menu on hover */
 .dropdown:hover .dropdown-content {
   display: flex;
 }
@@ -106,6 +103,10 @@ div[data-youtube-video] > iframe {
 
 .ProseMirror-selectednode iframe {
   transition: outline 0.15s;
+}
+
+.sampaadak-link {
+  cursor: pointer;
 }
 
 @media only screen and (max-width: 480px) {
